language/move-lang/tests/move_check/expansion/use_struct_unbound.exp
error[E03003]: unbound module member
  ┌─ tests/move_check/expansion/use_struct_unbound.move:6:17
  │
2 │ module X {
  │        - Module '0x2::X' declared here
  ·
6 │     use 0x2::X::S;
  │                 ^ Invalid 'use'. Unbound member 'S' in module '0x2::X'

error[E03004]: unbound type
  ┌─ tests/move_check/expansion/use_struct_unbound.move:8:19
  │
8 │     struct X { f: S }
  │                   ^ Unbound type 'S' in current scope

