language/move-lang/tests/move_check/expansion/use_struct_unbound.move
address 0x2 {
module X {
}

module M {
    use 0x2::X::S;

    struct X { f: S }
}
}
